minor changes to the construction of data in notebook how_to_use_widgets

--- a/how_to_use_widgets.ipynb
+++ b/how_to_use_widgets.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,11 +40,11 @@
     "\n",
     "# add depth dimension of length `z`\n",
     "z = 8\n",
-    "some_data_with_depth = some_data[None, :, :] * np.exp(np.linspace(1, 2, z))[:, None, None]\n",
+    "some_data_with_depth = some_data[None, :, :] * np.exp(np.linspace(2, 1, z))[:, None, None]\n",
     "\n",
     "# add time dimension of length `t`\n",
     "t = 10\n",
-    "data = some_data_with_depth[None, :, :, :] * np.cos(np.linspace(0, np.pi / 2, t))[:, None, None, None]"
+    "data = some_data_with_depth[None, :, :, :] * np.cos(np.linspace(0, np.pi, t))[:, None, None, None]"
    ]
   },
   {
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,12 +100,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "814915f8b61a4111b4e8cab4dddf8426",
+       "model_id": "202c837bb40447c9b405b8b65d8b54e7",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(Dropdown(description='pack', index=1, options={'matplotlib': {'Accent': <matplotlib.colo…"
+       "interactive(children=(Dropdown(description='pack', options={'matplotlib': {'Accent': <matplotlib.colors.Listed…"
       ]
      },
      "metadata": {},
@@ -123,6 +123,13 @@
     "    plt.pcolormesh(data[time, depth, :, :], cmap=cmap, vmin=vmin, vmax=vmax)\n",
     "    plt.colorbar()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
