added some more explanations to how_to_use_widgets

--- a/how_to_use_widgets.ipynb
+++ b/how_to_use_widgets.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,12 +53,14 @@
    "source": [
     "Say, additionally to explore the data we also want to compare the colormaps of `matplotlib` and `cmocean`. So first we build two widgets, were the second (to choose the colormap) depends on the first (to choose between `matplotlib` and `cmocean`)  \n",
     "\n",
-    "This is a bit tricky and we have to put the colormaps into dictionaries for this to work. (If you want to compare colormaps of different packages more often, you can have a look at this [repository](https://github.com/jk-rieck/colormaps_from_palettable))"
+    "This is a bit tricky and we have to put the colormaps into dictionaries for this to work. (If you want to compare colormaps of different packages more often, you can have a look at this [repository](https://github.com/jk-rieck/colormaps_from_palettable))\n",
+    "\n",
+    "Note that the `cmocean` colormaps are also available in matplotlib, so we actually wouldn't need to do the following. But to have an example of how to use a widget that depends on another widget and how to generally compare colormaps of different packages, we will do the followind anyways..."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,21 +69,31 @@
     "cmaps['matplotlib'] = {}\n",
     "cmaps['cmocean'] = {}\n",
     "\n",
+    "# now we add the colormaps (the attribures of `plt.cm`) to the dictionary for `matplotlib`\n",
     "for m in plt.colormaps():\n",
     "    if m[0:3] != 'cmo':\n",
     "        cmaps['matplotlib'][m] = getattr(plt.cm, m)\n",
-    "        \n",
+    "\n",
+    "# and the same for `cmocean`\n",
     "for n in plt.colormaps():\n",
     "    if n[0:3] == 'cmo':\n",
     "        n_strp = n[4::]\n",
     "        cmaps['cmocean'][n_strp] = getattr(cm, n_strp)\n",
-    "\n",
+    "        \n",
+    "# Now we construct the first widget that has 'matplotlib' and 'cmocean' as options (the two entries in the \n",
+    "# dictionary `cmaps`)\n",
     "widget1 = widgets.Dropdown(options = {i: j for (i, j) in cmaps.items()})\n",
+    "\n",
+    "# For now, the second widget will remain empty\n",
     "widget2 = widgets.Dropdown()\n",
     "\n",
+    "# We now define a function that sets the options of the second widget depending on the item selected in the\n",
+    "# first widget\n",
     "def update(*args):\n",
     "    widget2.options = {k: l for (k, l) in widget1.value.items()}\n",
     "\n",
+    "# And finally we make sure that the function `update()` is called every time something happens in the first\n",
+    "# widget, so that widget 2 then displays the items according to our choice in the first widget\n",
     "widget1.observe(update)"
    ]
   },
@@ -94,13 +106,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "202c837bb40447c9b405b8b65d8b54e7",
+       "model_id": "a57c6cb8b02a4f4688cdffc62a08a770",
        "version_major": 2,
        "version_minor": 0
       },
