--- a/create_bathymetry.ipynb
+++ b/create_bathymetry.ipynb
@@ -15,24 +15,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# Function to write the resulting bathymetry in a format that MITgcm understand (float32 is also possible as type)\n",
-    "def writefield(fname, data):\n",
-    "    import sys\n",
-    "    print('write to file: ' + fname)\n",
-    "    if sys.byteorder == 'little': data.byteswap(True)\n",
-    "    fid = open(fname, \"wb\")\n",
-    "    data.astype('float64').tofile(fid)\n",
-    "    fid.close()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -43,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -599,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -662,13 +644,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1eb22ae5feb9403f965f3f78e30be4da",
+       "model_id": "5020ae90ccd24f23a5b61c92299e366a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -718,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -762,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -776,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -785,22 +767,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 15,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "write to file: SOME_NAME-CONFIG1-bathymetry.bin\n",
-      "write to file: SOME_NAME-CONFIG1-restoring_mask_with_sponge.bin\n"
-     ]
-    }
-   ],
    "source": [
-    "writefield(setup + '-' + confi + '-bathymetry.bin', bathy)\n",
-    "writefield(setup + '-' + confi + '-restoring_mask_with_sponge.bin', mask)"
+    "To save the file, we need to convert it to big endian (this is required by the MITgcm, might be different for other models!). This is achieved by converting to type `>f4` for single precision files and `>f8` for double precision files."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bathy.astype(\">f4\").tofile(setup + '-' + confi + '-bathymetry.bin')\n",
+    "mask.astype(\">f4\").tofile(setup + '-' + confi + '-restoring_mask_with_sponge.bin')"
    ]
   },
   {
