changed error in attributes of output file

--- a/construct_vertical_grid.ipynb
+++ b/construct_vertical_grid.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "departmental-mention",
+   "id": "obvious-actor",
    "metadata": {},
    "source": [
     "### Construct a vertical grid following Stewart et al. (2017)\n",
@@ -12,7 +12,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "photographic-double",
+   "id": "logical-gates",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "nearby-bulletin",
+   "id": "periodic-minnesota",
    "metadata": {},
    "source": [
     "Choose some parameters for the vertical grid"
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "geological-sarah",
+   "id": "smoking-label",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "numerical-dream",
+   "id": "moderate-chess",
    "metadata": {},
    "source": [
     "### Build the grid\n",
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "actual-relay",
+   "id": "inside-count",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "worldwide-income",
+   "id": "auburn-aurora",
    "metadata": {},
    "source": [
     "This is where the magic happens: an iterative process that takes a step from the current end (deepest point) of the grid along the function to find the next point. After that, we need to relocate the initial grid vertically so that the grid spacing at the surface is min_dz. All this is done in a function so we can interactively change the paraemters later."
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "virgin-synthesis",
+   "id": "public-castle",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "educational-locking",
+   "id": "compatible-climb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "given-priority",
+   "id": "official-stream",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "disturbed-lover",
+   "id": "through-insurance",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "occupational-workplace",
+   "id": "statewide-egyptian",
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "shaped-saint",
+   "id": "short-chosen",
    "metadata": {},
    "source": [
     "Based on which parameters we have chosen in the interactive panel, we now calculate the vertical axis and all the different properties as they would appear in the MITgcm grid output."
@@ -268,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "extra-values",
+   "id": "hawaiian-symposium",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "religious-evidence",
+   "id": "affecting-devon",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "proud-alcohol",
+   "id": "complex-southeast",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,24 +307,24 @@
     "ds_out[\"Z\"].attrs = {\"standard_name\": \"depth\", \n",
     "                     \"long_name\": \"vertical coordinate of cell center\",\n",
     "                     \"units\": \"m\",\n",
-    "                     \"positive\": \"down\",\n",
+    "                     \"positive\": \"up\",\n",
     "                     \"axis\": \"Z\"}\n",
     "ds_out[\"Zp1\"].attrs = {\"standard_name\": \"depth_at_w_location\", \n",
     "                       \"long_name\": \"vertical coordinate of cell interface\",\n",
     "                       \"units\": \"m\",\n",
-    "                       \"positive\": \"down\",\n",
+    "                       \"positive\": \"up\",\n",
     "                       \"axis\": \"Z\",\n",
     "                       \"c_grid_axis_shift\": (-0.5, 0.5)}\n",
     "ds_out[\"Zu\"].attrs = {\"standard_name\": \"depth_at_lower_w_location\", \n",
     "                      \"long_name\": \"vertical coordinate of lower cell interface\",\n",
     "                      \"units\": \"m\",\n",
-    "                      \"positive\": \"down\",\n",
+    "                      \"positive\": \"up\",\n",
     "                      \"axis\": \"Z\",\n",
     "                      \"c_grid_axis_shift\": 0.5}\n",
     "ds_out[\"Zl\"].attrs = {\"standard_name\": \"depth_at_upper_w_location\", \n",
     "                      \"long_name\": \"vertical coordinate of upper cell interface\",\n",
     "                      \"units\": \"m\",\n",
-    "                      \"positive\": \"down\",\n",
+    "                      \"positive\": \"up\",\n",
     "                      \"axis\": \"Z\",\n",
     "                      \"c_grid_axis_shift\": -0.5}\n",
     "ds_out[\"drC\"].attrs = {\"standard_name\": \"cell_z_size_at_w_location\", \n",
@@ -345,7 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "individual-circular",
+   "id": "moderate-olympus",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "vulnerable-vocabulary",
+   "id": "administrative-juvenile",
    "metadata": {},
    "outputs": [],
    "source": []
